# librdt

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: .gitignore  Doxyfile
inc/: bintree.h  daemon.h  hashtable.h  list.h  namednode.h  node.h
src/: .gitignore  Makefile  Makefile.am  Makefile.in  bintree.c  daemon.c  hashtable.c  list.c  namednode.c  node.c
src/.deps/: bintree.Po  daemon.Po  list.Po  namednode.Po  node.Po
test/bintree/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old
test/bintree/inc/: test_bintree.h
test/bintree/src/: test_bintree_auxiliar.c  test_bintree_create.c  test_bintree_insert.c  test_bintree_launcher.c
test/bintree/src/.deps/: test_bintree_auxiliar.Po  test_bintree_create.Po  (+2 more)
test/list/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old
test/list/inc/: test_list.h
test/list/src/: test_list_auxiliar.c  test_list_create.c  test_list_insert.c  test_list_launcher.c  test_list_remove.c
test/namednode/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old
test/namednode/inc/: test_namednode.h
test/namednode/src/: test_namednode_auxiliar.c  test_namednode_copy.c  test_namednode_create.c  test_namednode_launcher.c
test/node/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old
test/node/inc/: test_node.h
test/node/src/: test_node_auxiliar.c  test_node_copy.c  test_node_create.c  test_node_launcher.c
(+13 files in other folders)
